[package]
name = "rbt"
version = "0.1.0"
edition = "2024"

[dependencies]
# quickcheck = { git = "https://github.com/alpaylan/quickcheck.git" , branch = "master" , features = ["etna"]}
quickcheck = { path = "/Users/akeles/Programming/projects/PbtBenchmark/quickcheck" , features = ["etna"]}
etna-rs-utils = { git = "https://github.com/alpaylan/etna-rs-utils", branch = "main" }
serde = { version = "1.0.219", features = ["derive"] }
crabcheck = { version = "0.1.0", path = "../../../..", features = ["profiling"] }
serde-lexpr = "0.1.3"
serde_json = "1.0.141"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
rand = "0.9.2"

[[bin]]
name = "faultloc"
path = "src/faultloc.rs"

[[bin]]
name = "rbt"
path = "src/main.rs"

[[bin]]
name = "rbt-serialized"
path = "src/main_serialized.rs"

[[bin]]
name = "rbt-sampler"
path = "src/main_sampler.rs"
